<resources>
    <string name="app_name">FitnessApp</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="complete">Complete</string>
    <string name="timer">Timer</string>
    <string name="done">Done</string>
    <string name="rate_difficulty">Rate the difficulty of each exercise\n(1 = too easy, 10 = maximum effort)</string>
    <string name="select_a_muscle_group">Select a muscle group</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="would_you_like_to_target_a_muscle">Would you like to target a muscle?</string>
    <string name="create_a_general_workout_program">Create a general workout program</string>
    <string name="i_have_a_weak_area_i_want_to_focus_on">I have a weak area I want to focus on</string>
    <string name="next">Next</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="male">Male</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_profile">My profile</string>
    <string name="log_out">Log out</string>
    <string name="sign_in">Sign in</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
</resources>